fix service page aaded even spacing inside cards

--- a/frontend/src/pages/AboutUsPage/AboutUsFAQ.css
+++ b/frontend/src/pages/AboutUsPage/AboutUsFAQ.css
@@ -8,44 +8,44 @@
   font-family: 'Inter', sans-serif;
 }
 
-.faq-left {
+.aboutusfaq-wrapper .faq-left {
   flex: 1;
   max-width: 500px;
   padding: 0 2rem;
 }
 
-.faq-heading {
+.aboutusfaq-wrapper  .faq-heading {
   font-size: 2.5rem;
   font-weight: 500;
   margin-bottom: 20px;
   color: #000;
 }
 
-.faq-subtext {
+.aboutusfaq-wrapper .faq-subtext {
   font-size: 16px;
   color: #000;
   margin-bottom: 40px;
 }
 
-.faq-card {
+.aboutusfaq-wrapper .faq-card {
   background: #fafafa;
   border-radius: 17px;
   padding: 20px;
 }
 
-.faq-card h3 {
+.aboutusfaq-wrapper .faq-card h3 {
   font-size: 24px;
   margin-bottom: 10px;
   color: #000;
 }
 
-.faq-card p {
+.aboutusfaq-wrapper .faq-card p {
   font-size: 14px;
   margin-bottom: 20px;
   color: #000;
 }
 
-.faq-contact-button {
+.aboutusfaq-wrapper .faq-contact-button {
   background-color: #a7f46a;
   border: none;
   border-radius: 8px;
@@ -56,17 +56,17 @@
   color: #000;
 }
 
-.faq-right {
+.aboutusfaq-wrapper  .faq-right {
   flex: 1;
   max-width: 600px;
   margin-top: 4rem;
 }
 
-.faq-item {
+.aboutusfaq-wrapper .faq-item {
   margin-bottom: 20px;
 }
 
-.faq-question {
+.aboutusfaq-wrapper .faq-question {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -75,11 +75,11 @@
   cursor: pointer;
 }
 
-.faq-icon {
+.aboutusfaq-wrapper .faq-icon {
   margin-left: 10px;
 }
 
-.faq-answer {
+.aboutusfaq-wrapper .faq-answer {
   margin-top: 10px;
   font-size: 14px;
   color: #000;
@@ -100,7 +100,7 @@
 }
 
 
-.faq-divider {
+.aboutusfaq-wrapper .faq-divider {
   margin-top: 15px;
   border: none;
   height: 1px;
@@ -115,26 +115,26 @@
     padding: 0;
   }
 
-  .faq-left,
+ .aboutusfaq-wrapper  .faq-left,
   .faq-right {
     max-width: 100%;
     padding: 0 2.5rem;
   }
 
 
-  .faq-subtext {
+  .aboutusfaq-wrapper .faq-subtext {
     font-size: 1rem;
    
   }
-  .faq-card{
+  .aboutusfaq-wrapper .faq-card{
     padding: 2rem 0;
   }
 
-  .faq-card h3 {
+  .aboutusfaq-wrapper .faq-card h3 {
     font-size: 20px;
   }
 
-  .faq-card p {
+  .aboutusfaq-wrapper .faq-card p {
     font-size: 13px;
   }
 }
@@ -145,32 +145,32 @@
     padding: 30px 0;
   }
 
-  .faq-subtext {
+  .aboutusfaq-wrapper .faq-subtext {
     font-size: 14px;
   }
 
-  .faq-card {
+  .aboutusfaq-wrapper .faq-card {
     padding: 16px;
   }
 
-  .faq-card h3 {
+  .aboutusfaq-wrapper .faq-card h3 {
     font-size: 18px;
   }
 
-  .faq-card p {
+  .aboutusfaq-wrapper .faq-card p {
     font-size: 12px;
   }
 
-  .faq-contact-button {
+  .aboutusfaq-wrapper .faq-contact-button {
     padding: 6px 16px;
     font-size: 12px;
   }
 
-  .faq-question {
-    font-size: 15px;
+  .aboutusfaq-wrapper .faq-question {
+    font-size: 1rem;
   }
 
-  .faq-answer {
-    font-size: 13px;
+  .aboutusfaq-wrapper .faq-answer {
+    font-size: 15px;
   }
 }
